third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-time/second-over.stderr
TOML parse error at line 3, column 11
  |
3 | d = 00:00:61
  |           ^
invalid time
value is out of range
